--- a/search.html
+++ b/search.html
@@ -54,7 +54,8 @@
       </div>
     </div>
     <!-- Body -->
-    <div class="container mt-7 pb-4">
+    <div class="container mt-7 pb-6">
+      <!-- 搜索框 -->
       <div class="row mb-5">
         <div class="col-md-9">
           <div class="input-group input-group-lg">
@@ -65,11 +66,12 @@
           </div>
         </div>
       </div>
+      <!-- 新闻搜索结果 -->
       <div class="row mx-auto mb-2 justify-content-between">
         <h2>新闻：</h2>
         <h2>总共：03</h2>
       </div>
-      <div class="row mt-3 mb-4">
+      <div class="row mt-3 mb-2">
         <div class="col-md-8">
           <div class="card mb-4 item-history">
             <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
@@ -110,11 +112,13 @@
           </div>
         </div>
       </div>
-      <div class="row mx-auto mb-2 justify-content-between">
+      <a href="#" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</a>
+      <!-- 竞赛搜索结果 -->
+      <div class="row mx-auto mt-5 mb-2 justify-content-between">
         <h2>竞赛：</h2>
         <h2>总共：03</h2>
       </div>
-      <div class="row mt-3">
+      <div class="row mt-3 mb-2">
         <div class="col-md-8">
           <div class="card mb-4 item-history">
             <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
@@ -173,6 +177,7 @@
           </div>
         </div>
       </div>
+      <a href="#" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</a>
     </div>
     <!-- Footer -->
     <div class="footer">
